# mdarrays

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
docs/: CUDA_INTEGRATION.md
include/backend/: backend.h  cuda_common.h  cuda_kernels.h  cuda_storage.h  device.h  gpu_module.h  gpu_storage.h  gpu_tensor.h  simd_kernel.h
include/data/: data.h  data_downloader.h
include/exp/: exp.h  exp_impl.h  function.h  grad_impl.h
include/exp/operator/: basic_op.h  constant.h  conv.h  log_softmax.h  matrix_op.h  nll_loss.h  reduce_op.h  softmax.h
include/learning/: init.h  module.h  optimizer.h
include/mdarray/: mdarray.h  mdarray_impl.h  shape.h  storage.h
include/multidimensional_arrays/: multidimensional_arrays.h  multidimensional_arrays_impl.h  shape.h  storage.h
include/utils/: array.h  base_config.h  dynamic_array.h  exception.h  fixed_array.h  log.h  utils.h
src/backend/: cuda_kernels.cu
src/data/: data.cpp  data_downloader.cpp
src/learning/: init.cpp  module.cpp  optim.cpp  optimizer.cpp
src/mdarray/: mdarray.cpp  mdarray_impl.cpp  shape.cpp  storage.cpp
src/multidimensional_arrays/: multidimensional_arrays.cpp  multidimensional_arrays_impl.cpp  shape.cpp  storage.cpp
src/utils/: exception.cpp
test/: cifar10_comparison.cpp  cnn_cifar_10.cpp  cnn_mnist.cpp  mlp_mnist.cpp  mlp_mnist_gpu.cpp  test_base.cpp  test_base_model.cpp  test_cuda.cpp  train_cnn.cpp  train_cnn_simple.cpp  train_mlp_simple.cpp  transformer_mnist.cpp
